# DragonchessAI

./: .gitattributes  .gitignore  CHANGELOG.md  CLUSTER_RAY.md  CMakeLists.txt  CONTRIBUTING.md  EXPERIMENT.md  GIT_COMMANDS.sh  HEADLESS_MODE.md  LICENSE  PLAN.md  PLUGIN_SYSTEM.md  README.md  STUDENT_GUIDE.md  ai.py  analyze_results.py  best_weights.txt  bitboard.py  campaign.py  cma_es_log.txt  common.py  dashboard.py  dragonfish_ga_log.csv  environment.yml  evaluate_posttrain.py  evolve_dragonfish.py  fast_minimax.py  ga_evolve.py  game.py  generate_dataset.py  main.py  mcts.py  menu.py  minimax.py  moves.py  notify_training.py  pieces.py  release.sh  requirements-cluster.txt  requirements.txt  (+19 more)
.github/workflows/: build.yml
bots/: dragonfish.py  dragonfish_evo.py  evo_minimax.py  fast_minimax.py  ga_bot.py  jackman.py  mcts.py  novice.py  simple_minimax.py  weak_dragonfish.py
cluster/: __init__.py  evaluator_pool.py  nn_pool.py  runtime_sync.py  worker_config.py
examples/: README.md  aggressive_bot.cpp  material_bot.cpp  positional_bot.cpp  random_bot.cpp  run_tournament.sh  student_bot.cpp  tactical_bot.cpp
logs/: ga_log.csv  tournament_results.csv
results/cc/: run_000.json  run_001.json  run_002.json  run_003.json  run_004.json  run_005.json  run_006.json  run_007.json  run_008.json  run_009.json  run_010.json  run_011.json  run_012.json  run_013.json  run_014.json
results/mini/cc/: run_000.json  run_001.json  run_002.json  summary.json
results/mini/monolithic/: run_000.json  run_001.json  run_002.json  summary.json
results/monolithic/: run_000.json  run_001.json  run_002.json  run_003.json  run_004.json  run_005.json  run_006.json  run_007.json  run_008.json  run_009.json  run_010.json  run_011.json  run_012.json  run_013.json  run_014.json  run_015.json  run_016.json  run_017.json  run_018.json  run_019.json  run_020.json  run_021.json  run_022.json  run_023.json  run_024.json  run_025.json  run_026.json  run_027.json  run_028.json  run_029.json
results/posttrain/: posttrain_eval.json
results/prelim_cc_200g/: run_000.json  summary.json
results/prelim_mono/: run_000.json  summary.json
results/prelim_mono_200g/: run_000.json  summary.json
setup/: cluster_sync.py  setup_ray.py
src/: ai.cpp  ai.h  ai_plugin.cpp  ai_plugin.h  bitboard.cpp  bitboard.h  campaign.cpp  campaign.h  example_bots.cpp  game.cpp  game.h  headless.cpp  headless.h  headless_main.cpp  input.cpp  input.h  input_helpers.h  main.cpp  main.cpp.broken  mcts.cpp  mcts.h  menu.cpp  menu.h  moves.cpp  moves.h  nn_eval.h  renderer.cpp  renderer.h  simple_ai.cpp  simple_ai.h  td_features.cpp  td_features.h  test_game.cpp  tournament.cpp  tournament.cpp.old  tournament.h
